// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab navs props test 1`] = `
<div>
  <div
    class="ofa-tab-navs-wrapper"
  >
     
    <div
      class="ofa-tab-navs test-className"
      style="background-color: red; width: 80%; height: 50px;"
    >
      <div
        class="ofa-tab-nav-item test-navs-className"
      >
        tab1
      </div>
      <div
        class="ofa-tab-nav-item tab-nav__error test-navs-className"
      >
        tab2
      </div>
      <div
        class="ofa-tab-nav-item tab-nav__warning test-navs-className"
      >
        tab3
      </div>
      <div
        class="ofa-tab-nav-item ofa-tab-nav-disabled tab-nav__error test-navs-className"
      >
        tab4
      </div>
    </div>
  </div>
</div>
`;

exports[`tab props test 1`] = `
<div>
  <div
    class="ofa-tab-wrapper ofa-tab-direction__horizon test-className"
    style="max-height: 500px;"
  >
    <div
      class="ofa-tab-navs-wrapper"
    >
       
      <div
        class="ofa-tab-navs"
      >
        <div
          class="ofa-tab-nav-item test-navs-className"
        >
          tab1
        </div>
        <div
          class="ofa-tab-nav-item tab-nav__error test-navs-className"
        >
          tab2
        </div>
        <div
          class="ofa-tab-nav-item tab-nav__warning test-navs-className"
        >
          tab3
        </div>
        <div
          class="ofa-tab-nav-item ofa-tab-nav-disabled tab-nav__error test-navs-className"
        >
          tab4
        </div>
      </div>
    </div>
  </div>
</div>
`;
